--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px;
+  padding: var(--horizontal-space);
   padding-top: 40px;
+  margin-bottom: 15px;
 }
 
 .screen-header__title {
@@ -13,4 +14,21 @@
 
 .screen-header__icons span {
   margin-left: 25px;
+}
+
+.screen-header__icons-cog {
+  position: relative;
+}
+
+.screen-header__notification {
+  background-color: tomato;
+  width: 6px;
+  height: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  position: absolute;
+  right: -5px;
+  bottom: 25px;
 }
